deployment/sonarqube/base/sonarqube.ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: sonarqube
  labels:
    istio-injection: enabled
