deployment/sonarqube/base/sonarqube.vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  hosts:
    - "sonar.int.anhdle14.me"
  gateways:
    - istio-system/gateway
  http:
    - route:
        - destination:
            port:
              number: 9000
            host: sonarqube-sonarqube
